--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.17.5",
+    "nuxt-highcharts": "^3.1.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   }
