--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.13.0",
     "nuxt": "^3.17.5",
     "nuxt-highcharts": "^3.1.1",
     "vue": "^3.5.16",
+    "vue-i18n": "^11.1.6",
     "vue-router": "^4.5.1"
   }
 }
